// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modeles getAllModeles 1`] = `
[
  {
    "breadcrumbs": [
      {
        "label": "Départ de l’entreprise",
        "position": 8,
        "slug": "/themes/depart-de-lentreprise",
      },
      {
        "label": "Rupture conventionnelle",
        "position": 3,
        "slug": "/themes/rupture-conventionnelle",
      },
      {
        "label": "Rupture conventionnelle individuelle",
        "position": 1,
        "slug": "/themes/rupture-conventionnelle-individuelle",
      },
    ],
    "cdtnId": "a712ecb976",
    "description": "La rupture conventionnelle individuelle est une modalité de rupture spécifique du CDI. Elle nécessite le consentement de l’employeur et du salarié, et son homologation par l’administration. La rupture ouvre droit à une indemnité de rupture conventionnelle. Ce modèle permet d’initier la procédure de rupture par l’invitation à un premier entretien.",
    "slug": "demande-de-rendez-vous-en-vue-dune-rupture-conventionnelle",
    "source": "modeles_de_courriers",
    "title": "Demande de rendez-vous en vue d’une rupture conventionnelle",
  },
  {
    "breadcrumbs": [
      {
        "label": "Embauche et contrat de travail",
        "position": 1,
        "slug": "/themes/embauche-et-contrat-de-travail",
      },
      {
        "label": "Embauche",
        "position": 1,
        "slug": "/themes/embauche",
      },
      {
        "label": "Période d’essai",
        "position": 3,
        "slug": "/themes/periode-dessai",
      },
    ],
    "cdtnId": "772cb955ce",
    "description": "Pendant la période d’essai, le contrat de travail peut être rompu librement par l’employeur. L’employeur doit dans ce cas informer le salarié et respecter un délai de prévenance.",
    "slug": "rupture-de-periode-dessai-a-linitiative-de-lemployeur",
    "source": "modeles_de_courriers",
    "title": "Rupture de période d’essai à l’initiative de l’employeur",
  },
  {
    "breadcrumbs": [
      {
        "label": "Départ de l’entreprise",
        "position": 8,
        "slug": "/themes/depart-de-lentreprise",
      },
      {
        "label": "Documents à remettre au salarié",
        "position": 0,
        "slug": "/themes/documents-a-remettre-au-salarie",
      },
    ],
    "cdtnId": "19837df114",
    "description": "Le certificat de travail est un document obligatoire remis par l’employeur au salarié à la date de fin du contrat de travail.",
    "slug": "certificat-de-travail",
    "source": "modeles_de_courriers",
    "title": "Certificat de travail",
  },
]
`;

exports[`Modeles getByIdsModeles 1`] = `
[
  {
    "breadcrumbs": [
      {
        "label": "Départ de l’entreprise",
        "position": 8,
        "slug": "/themes/depart-de-lentreprise",
      },
      {
        "label": "Rupture conventionnelle",
        "position": 3,
        "slug": "/themes/rupture-conventionnelle",
      },
      {
        "label": "Rupture conventionnelle individuelle",
        "position": 1,
        "slug": "/themes/rupture-conventionnelle-individuelle",
      },
    ],
    "cdtnId": "a712ecb976",
    "description": "La rupture conventionnelle individuelle est une modalité de rupture spécifique du CDI. Elle nécessite le consentement de l’employeur et du salarié, et son homologation par l’administration. La rupture ouvre droit à une indemnité de rupture conventionnelle. Ce modèle permet d’initier la procédure de rupture par l’invitation à un premier entretien.",
    "fileUrl": "https://cdtnadminprod.blob.core.windows.net/cdtn/demande_rdv_rupture_conventionnelle.docx",
    "filesize": 14535,
    "html": "<style>
.courrier-expediteur {display: flex; align-items: flex-start; flex-direction:column;}
.courrier-destinataire {display: flex; align-items: flex-end; flex-direction:column;}
.courrier-signature {display: flex; flex-direction:column; align-items: flex-end;}
.title-center {display: flex; align-items: center; flex-direction:column; font-size: 1.8rem; font-weight:bold}
.center {display: flex; align-items: center; flex-direction:column; }
.checklist { list-style-image: url(data:image/svg+xml;,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%221rem%22%20height%3D%221rem%22%20viewBox%3D%220%200%2011%2011%22%3E%3Cpath%20fill%3D%22currentColor%22%20d%3D%22M2%202h10v10H2z%22%2F%3E%3Cpath%20fill%3D%22%23fff%22%20stroke%3D%22currentColor%22%20stroke-width%3D%22.5%22%20d%3D%22M1%201h9v9H1z%22%2F%3E%3C%2Fsvg%3E);}
.editable {color: #4d73b8}
</style><div class="courrier-expediteur"><p><span class='editable'>« Prénom Nom du salarié »</span></p><p><span class='editable'>« Adresse »</span></p><p><span class='editable'>« Code postal + Ville »</span></p><p><span class='editable'>« Tél : 00.00.00.00.00 »</span></p><p><span class='editable'>« E-mail : …………@... »</span></p></div><div class="courrier-destinataire"><p><span class='editable'>« Société »</span></p><p><span class='editable'>« Prénom Nom du représentant »</span></p><p><span class='editable'>« Fonction (DRH, etc.) »</span></p><p><span class='editable'>« Adresse »</span></p><p><span class='editable'>« Code postal + Ville »</span></p><p>A<a id="__DdeLink__1875_1685986494"></a> <span class='editable'>« lieu »</span>, le <span class='editable'>« date »</span></p></div><div class="courrier-expediteur"><p>Objet : Demande de rendez-vous en vue d’une éventuelle rupture conventionnelle</p></div><p><span class='editable'>« Madame / Monsieur »</span>,</p><p>Je sollicite un entretien afin de vous proposer que nous convenions ensemble, si vous en êtes d’accord, de la rupture de mon contrat de travail dans le cadre légal de la rupture conventionnelle. </p><p>A cette occasion, je vous présenterai les raisons de ma démarche et nous pourrons déterminer d’un commun accord les modalités de la rupture de mon contrat de travail.</p><p>Seriez-vous disponible pour un rendez-vous ce mois-ci, à la date qui vous convient ? </p><p>Vous pouvez me joindre aux coordonnées présentées ci-dessus.</p><p>Veuillez agréer, <span class='editable'>« Madame / Monsieur »</span>, l’expression de ma considération distinguée.</p><div class="courrier-destinataire"><p><span class='editable'>« Prénom Nom du salarié »</span></p><p><span class='editable'>« Signature »</span></p></div>",
    "slug": "demande-de-rendez-vous-en-vue-dune-rupture-conventionnelle",
    "source": "modeles_de_courriers",
    "title": "Demande de rendez-vous en vue d’une rupture conventionnelle",
  },
]
`;

exports[`Modeles getBySlugModeles 1`] = `
{
  "breadcrumbs": [
    {
      "label": "Départ de l’entreprise",
      "position": 8,
      "slug": "/themes/depart-de-lentreprise",
    },
    {
      "label": "Rupture conventionnelle",
      "position": 3,
      "slug": "/themes/rupture-conventionnelle",
    },
    {
      "label": "Rupture conventionnelle individuelle",
      "position": 1,
      "slug": "/themes/rupture-conventionnelle-individuelle",
    },
  ],
  "cdtnId": "a712ecb976",
  "description": "La rupture conventionnelle individuelle est une modalité de rupture spécifique du CDI. Elle nécessite le consentement de l’employeur et du salarié, et son homologation par l’administration. La rupture ouvre droit à une indemnité de rupture conventionnelle. Ce modèle permet d’initier la procédure de rupture par l’invitation à un premier entretien.",
  "slug": "demande-de-rendez-vous-en-vue-dune-rupture-conventionnelle",
  "source": "modeles_de_courriers",
  "title": "Demande de rendez-vous en vue d’une rupture conventionnelle",
}
`;

exports[`Modeles getBySlugsModeles 1`] = `
[
  {
    "breadcrumbs": [
      {
        "label": "Départ de l’entreprise",
        "position": 8,
        "slug": "/themes/depart-de-lentreprise",
      },
      {
        "label": "Rupture conventionnelle",
        "position": 3,
        "slug": "/themes/rupture-conventionnelle",
      },
      {
        "label": "Rupture conventionnelle individuelle",
        "position": 1,
        "slug": "/themes/rupture-conventionnelle-individuelle",
      },
    ],
    "cdtnId": "a712ecb976",
    "description": "La rupture conventionnelle individuelle est une modalité de rupture spécifique du CDI. Elle nécessite le consentement de l’employeur et du salarié, et son homologation par l’administration. La rupture ouvre droit à une indemnité de rupture conventionnelle. Ce modèle permet d’initier la procédure de rupture par l’invitation à un premier entretien.",
    "slug": "demande-de-rendez-vous-en-vue-dune-rupture-conventionnelle",
    "source": "modeles_de_courriers",
    "title": "Demande de rendez-vous en vue d’une rupture conventionnelle",
  },
]
`;
